Update to new shared module.